# scribae

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSE_AUDIT.md  brief-test.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  caches.yml  publish-test.yml  publish.yml
src/scribae/: __init__.py  brief.py  brief_cli.py  cli_output.py  common.py  feedback.py  feedback_cli.py  idea.py  idea_cli.py  init_cli.py  io_utils.py  language.py  llm.py  logging_config.py  main.py  meta.py  meta_cli.py  project.py  prompts.py  prompts_writer.py  refine.py  refine_cli.py  translate_cli.py  version_cli.py  write.py  write_cli.py  writer.py
src/scribae/prompts/: __init__.py  brief.py  feedback.py  feedback_categories.py  idea.py  meta.py  refine.py  write.py  writer.py
src/scribae/translate/: model_registry.py  mt.py  pipeline.py  postedit.py
tests/: conftest.py
tests/fixtures/: body_multi_section.md  body_with_frontmatter.md  body_without_frontmatter.md  brief_valid.json  draft.md  note_short.md
tests/unit/: brief_test.py  common_test.py  feedback_cli_test.py  idea_cli_test.py  init_cli_test.py  io_utils_test.py  language_test.py  logging_config_test.py  main_test.py  meta_cli_test.py  project_test.py  prompts_test.py  refine_cli_test.py  test_postedit.py  translate_cli_test.py  translate_pipeline_test.py  version_test.py  write_cli_test.py  write_language_test.py  writer_language_test.py
