[project]
name = "scribae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "pydantic-ai>=1.12.0",
    "typer>=0.20.0",
    "pyyaml>=6.0.2",
    "python-frontmatter>=1.1.0",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
]

[project.scripts]
scribae = "scribae.main:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "faker>=37.12.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["frontmatter", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
